# surogate

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.cu128  Dockerfile.cu129  Dockerfile.cu130  Makefile  README.md  alembic.ini  install.sh  pyproject.toml
csrc/: CMakeLists.txt
csrc/src/binding/: binding.cpp  py_train.cpp  py_train.h
csrc/src/config/: lora_adapter_config.h  pretrained_config.cpp  pretrained_config.h  rope_config.h
csrc/src/kernels/: AGENTS.md  SKILL.md  activation.cu  attention.cu  bias.cu  block_quant.cu  bnb_quant.cu  convert.cu  cudnn_att.cpp  encoder.cu  ep_dispatch.cu  fast_lora_silu.cu  fill.cu  flash_attn_scatter.cu  flash_attn_varlen.cpp  fused_classifier.cu  gated_delta_rule.cu  gated_delta_rule_v2.cu  global_norm.cu  kernel_utils.cuh  kernels.cpp  kernels.h  lora_dropout.cu  lora_small_rank.cu  mamba_kernels.cu  mask_scatter.cu  matmul.cpp  moe_cudnn.cpp  moe_kernels.cu  mrope.cu  mxfp4_dequant.cu  qk_norm.cu  random.cu  rmsnorm.cu  rope.cu  slice_add.cu  squirrel_noise.cuh  swiglu.cu  transpose.cu  transpose_template.cuh  (+1 more)
csrc/src/kernels/gated_delta_rule/: gated_delta_rule_v2.cuh  gated_delta_rule_v2_bwd.cu  gated_delta_rule_v2_fwd.cu  gdr_bwd_launchers.h  gdr_chunk_bwd_phase1.cu  gdr_chunk_bwd_phase2.cu  gdr_chunk_bwd_phase3.cu  gdr_chunk_checkpoint.cu  gdr_chunk_fwd_output.cu  gdr_chunk_fwd_precompute.cu  gdr_chunk_fwd_state.cu  gdr_fwd_launchers.h
csrc/src/recipes/: recipe.cpp  recipe.h  recipe_factory.cpp  recipe_factory.h
csrc/src/recipes/bf16/: README.md  bf16_matmul.h  bf16_recipe.h
csrc/src/recipes/fp8_hybrid/: README.md  fp8_hybrid_recipe.cpp  fp8_hybrid_recipe.h  fp8_matmul.h
csrc/src/recipes/nvfp4/: README.md  nvfp4_matmul.h  nvfp4_recipe.cpp  nvfp4_recipe.h
csrc/src/recipes/nvfp4_quartet/: nvfp4_quartet_recipe.cpp  nvfp4_quartet_recipe.h
csrc/src/runtime/attention/: attention_backend.h  attention_cudnn.cpp  attention_custom.cu  attention_kernels.h  backend_cudnn.cpp  backend_custom.cpp  backend_flash_varlen.cpp  backend_sdpa.cpp  flash_attention.cpp  flash_attn_scatter.cu  flash_attn_varlen.cpp
csrc/src/runtime/core/: backward_hooks.h  forward_hooks.h  fp4_run_state.h  fp8_run_state.h  fp8_scaling_config.h  fp8_scaling_state.h  matmul_context.h  mlp_utils.h  model_config.h  model_factory.h  qlora_provider.h  residual_manager.h  run_state_types.h
csrc/src/runtime/dsl/: autodiff.cpp  autodiff.h  autodiff_rules.cpp  buffer_plan.cpp  buffer_plan.h  compiled_ops.cpp  compiled_ops.h  compiled_ops_helpers.h  dsl_grad_store.cpp  dsl_grad_store.h  dsl_model.cpp  dsl_model.h  dsl_model_execution.cpp  dsl_model_helpers.cpp  dsl_model_internal.h  dsl_model_lora.cpp  dsl_model_optimizer.cpp  dsl_model_weights.cpp  dsl_param_store.cpp  dsl_param_store.h  dsl_run_state.cpp  dsl_run_state.h  dsl_runtime.h  dsl_runtime_config.h  dsl_weight_loader.cpp  dsl_weight_loader.h  dsl_weight_manager.cpp  dsl_weight_manager.h  forward_plan.h  graph_compiler.cpp  graph_compiler.h  graph_executor.cpp  graph_executor.h  graph_executor_backward.cpp  graph_executor_helpers.cpp  graph_executor_helpers.h  graph_executor_internal.h  graph_executor_tensors.cpp  graph_executor_tensors.h  graph_executor_utils.cpp  (+14 more)
csrc/src/runtime/ep/: ep_buffer_pool.cpp  ep_buffer_pool.h  ep_state.cpp  ep_state.h  ep_strategy.cpp  ep_strategy.h  lpt_planner.cpp  lpt_planner.h  weight_transfer.cpp  weight_transfer.h
csrc/src/runtime/executor/: compiled_ops.cpp  compiled_ops.h  compiled_ops_execute.cpp  compiled_ops_save.cpp  graph_executor.cpp  graph_executor.h  graph_executor_tensors.cpp  op_registry.cpp  op_registry.h
csrc/src/runtime/jit/: gated_delta_rule_kernels.cpp  gated_delta_rule_kernels.h  jit_kernel.cpp  jit_kernel.h
csrc/src/runtime/lora/: fast_expert_lora.h  lora_config.h  lora_grads_manager.cpp  lora_grads_manager.h  lora_model_utils.h  lora_optimizer_state.cpp  lora_optimizer_state.h  lora_run_state.h  lora_types.h  lora_utils.cpp  lora_utils.h  lora_weights.h  lora_weights_manager.cpp  lora_weights_manager.h
csrc/src/runtime/moe/: moe_types.h
csrc/src/runtime/ops/: add.cpp  bias_add.cpp  concat_split.cpp  cross_entropy_loss.cpp  deepstack_inject.cpp  embedding.cpp  ep_combine.cpp  ep_dispatch.cpp  flash_attention.cpp  fused_lm_head_loss.cpp  fused_residual_rmsnorm.cpp  gated_delta_rule.cpp  gelu.cpp  gpt_oss_moe_act.cpp  layernorm.cpp  mamba_conv1d.cpp  mamba_gated_rmsnorm.cpp  mamba_out_proj.cpp  mamba_split_conv_out.cpp  mamba_split_proj.cpp  mamba_ssm_scan.cpp  mask_scatter.cpp  matmul.cpp  matmul_swiglu.cpp  moe_expert_bias_add.cpp  moe_grouped_gemm.cpp  moe_grouped_gemm_down.cpp  moe_grouped_gemm_gate_up.cpp  moe_permute.cpp  moe_sigmoid.cpp  moe_softmax.cpp  moe_topk.cpp  moe_unpermute.cpp  mrope.cpp  mul.cpp  narrow.cpp  ones.cpp  qkv_qk_norm.cpp  qkv_qk_norm_rope.cpp  qwen3_5_decay.cpp  (+10 more)
csrc/src/runtime/optimizers/: adamw.cu  adamw.h  adamw_8bit.cu  adamw_8bit.h  cpu_adamw.cpp  cpu_adamw.h  flash_adamw_8bit.cu  flash_adamw_8bit.h  normuon.cu  normuon.h  optimizer_base.h  optimizer_config.h  polar_express.cu  polar_express.h
csrc/src/runtime/qlora/: adapter_merger.cpp  adapter_merger.h  bnb_quantizer.cpp  bnb_quantizer.h  dsl_qlora_pipeline.cpp  dsl_qlora_pipeline.h  fp4_block_quantized_tensor.h  fp4_quantizer.cpp  fp4_quantizer.h  fp8_quantizer.cpp  fp8_quantizer.h  generic_qlora_provider.cpp  generic_qlora_provider.h  generic_quantizer.cpp  generic_quantizer.h  generic_weight_manager.cpp  generic_weight_manager.h  (+7 more)
csrc/src/tokenizer/: bpe.h  tokenizer.cpp  tokenizer.h  unicode.cpp  unicode.h  unicode_data.cpp
csrc/src/utilities/: allocator.cpp  allocator.h  comm.cpp  comm.h  crash_handler.cpp  crash_handler.h  cu_file.cpp  cu_file.h  cu_file_fallback.cpp  dtype.cpp  dtype.h  gpu_info.h  gpu_info_fallback.cpp  gpu_info_nvml.cpp  lazy_allocator.cpp  lazy_allocator.h  philox.h  safetensors.cpp  safetensors.h  sol.cpp  sol.h  stack.cpp  stack.h  strided_iter.cuh  system_info.cpp  tensor.cpp  tensor.h  tensor_container.h  utils.cpp  utils.h  vec.cuh
environments/markdown-table-qa/: markdown_table_qa.py  pyproject.toml
(+697 files in other folders)
