[project]
name = "surogate"
dynamic = ["version"]
description = "Surogate LLMOps Toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Flavius Burca", email = "flavius@invergent.ai" }
]
maintainers = [
    { name = "Flavius Burca", email = "flavius@invergent.ai" }
]
urls = { "Homepage" = "https://surogate.ai", "Repository" = "https://github.com/invergent-ai/surogate", "Issues" = "https://github.com/invergent-ai/surogate/issues" }
keywords = ["machine learning", "large language model"]
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Environment :: GPU :: NVIDIA CUDA :: 13",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "transformers>=5.3.0",
    "huggingface-hub>=1.4.1",
    "hf-transfer>=0.1.9",
    "datasets>=4.3.0",
    "addict",
    "peft",
    "json_repair",
    "unique-namer",
    "nanobind",
    "binpacking",
    "rich>=13.0.0",
    "psutil",
    "matplotlib",
    "qwen-vl-utils==0.0.14",
    "pydantic",
    "fsspec[http]>=2023.1.0,<=2025.3.0",
    "s3fs>=2024.6.0,<2025.10.0",
    "gcsfs>=2024.6.0,<2025.10.0",
    "adlfs>=2024.7.0,<2025.8.0",
    "ocifs==1.3.4",
    "densemax-lakefs-spec @ https://densemax.s3.eu-central-1.amazonaws.com/densemax_lakefs_spec-1.50.0-py3-none-any.whl",
    "densemax-lakefs-sdk @ https://densemax.s3.eu-central-1.amazonaws.com/densemax_lakefs_sdk-1.50.0-py3-none-any.whl",
    "torch @ https://download.pytorch.org/whl/cu129/torch-2.9.1%2Bcu129-cp312-cp312-manylinux_2_28_x86_64.whl",
    "torchvision @ https://download-r2.pytorch.org/whl/cu129/torchvision-0.24.1%2Bcu129-cp312-cp312-manylinux_2_28_x86_64.whl",
    "ray>=2.5.0",
    "verifiers==0.1.11",
    "wandb==0.25.1"
]
scripts = { "surogate" = "surogate.cli.main:cli_main" }

[project.optional-dependencies]
dev = [
    "cmake>=4.1.0",
    "ninja",
    "packaging>=24.2",
    "setuptools>=77.0.3,<81.0.0",
    "setuptools-scm>=8.0",
    "wheel",
    "jinja2",
    "scikit_build_core",
    "pybind11-stubgen"
]

[build-system]
requires = ["scikit-build-core>=0.11", "nanobind"]
build-backend = "scikit_build_core.build"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "0.0.1"

[tool.scikit-build]
minimum-version = "build-system.requires"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
wheel.py-api = "cp312"
wheel.packages = ["surogate"]
build.targets = ["_surogate"]
build-dir = "build/{wheel_tag}"
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
PYTHON_BINDING = "ON"
USE_CUFILE = "OFF"
CMAKE_CUDA_ARCHITECTURES = {env="CUDAARCHS"}

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "surogate/**/*.py" },
    { file = "CMakeLists.txt" },
    { file = "csrc/CMakeLists.txt" }
]
